--- a/index.html
+++ b/index.html
@@ -3,127 +3,81 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Consulta del Frente por la Vida — ODEC | Ejercicio Pedagógico</title>
+  <title>Consultas – Ejercicio Pedagógico ODEC</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
-    :root{
-      /* Colores base alineados a un look institucional ODEC (ajustables en :root) */
-      --odec-primary:#0B5ED7;   /* azul institucional */
-      --odec-secondary:#111827; /* tinta */
-      --odec-accent:#22C55E;    /* acento para confirmaciones */
-      --odec-line:#E5E7EB;      /* líneas y bordes */
-      --odec-bg:#F3F4F6;        /* fondo neutro */
-      --odec-paper:#FFFFFF;     /* tarjeta */
-      --odec-warn:#B91C1C;      /* advertencia */
-    }
-    html,body{margin:0;padding:0;background:var(--odec-bg);color:var(--odec-secondary);font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif}
-    .bar{background:var(--odec-primary);color:#fff}
-    .bar-inner{max-width:1040px;margin:0 auto;padding:10px 16px;display:flex;gap:12px;align-items:center}
+    :root{--pri:#0B5ED7;--ink:#111827;--mut:#4B5563;--line:#E5E7EB;--bg:#F3F4F6;--card:#fff;--ok:#16a34a;--warn:#b91c1c}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    .bar{background:var(--pri);color:#fff}
+    .bar .inner{max-width:1120px;margin:0 auto;padding:10px 16px;display:flex;gap:12px;align-items:center}
     .bar img{height:28px}
-    .bar .title{font-weight:800;letter-spacing:.2px}
+    .bar .brand{font-weight:800}
 
-    .sheet{max-width:1040px;margin:20px auto;background:var(--odec-paper);border:1px solid var(--odec-line);box-shadow:0 8px 24px rgba(0,0,0,.06)}
-
-    header.hdr{padding:18px 18px 12px;border-bottom:2px solid var(--odec-secondary)}
+    .wrap{max-width:1120px;margin:20px auto;background:var(--card);border:1px solid var(--line);box-shadow:0 8px 24px rgba(0,0,0,.06)}
+    header.hdr{padding:18px 18px 12px;border-bottom:2px solid var(--ink)}
     header.hdr h1{font-size:20px;margin:0 0 6px 0;text-transform:uppercase;letter-spacing:.3px}
-    header.hdr p{margin:0;color:#4B5563}
+    header.hdr p{margin:0;color:var(--mut)}
 
-    .notice{padding:14px 18px;border-bottom:1px solid var(--odec-line);background:#FAFAFB}
+    .notice{padding:14px 18px;border-bottom:1px solid var(--line);background:#FAFAFB}
     .notice .caps{font-weight:800;text-transform:uppercase;letter-spacing:.2px}
-    .notice .warn{color:var(--odec-warn);font-weight:700}
+    .notice .warn{color:var(--warn);font-weight:700}
 
-    .grid{display:grid;border-top:1px solid var(--odec-line);border-left:1px solid var(--odec-line)}
+    .tabs{display:flex;flex-wrap:wrap;gap:8px;padding:12px 18px;border-bottom:1px solid var(--line)}
+    .tab{border:1px solid var(--line);padding:8px 12px;border-radius:8px;cursor:pointer;background:#fff;font-weight:700}
+    .tab.active{border-color:var(--pri);box-shadow:inset 0 0 0 2px var(--pri)}
+
+    .grid{display:grid;border-top:1px solid var(--line);border-left:1px solid var(--line)}
     @media (min-width:740px){ .grid{grid-template-columns:1fr 1fr} }
     @media (min-width:980px){ .grid{grid-template-columns:1fr 1fr 1fr} }
 
-    .cell{position:relative;min-height:260px;display:flex;flex-direction:column;gap:10px;padding:12px;border-right:1px solid var(--odec-line);border-bottom:1px solid var(--odec-line);cursor:pointer;background:#fff}
+    .cell{position:relative;min-height:260px;display:flex;flex-direction:column;gap:10px;padding:12px;border-right:1px solid var(--line);border-bottom:1px solid var(--line);cursor:pointer;background:#fff}
     .cell:hover{box-shadow:inset 0 0 0 2px #0b5ed71a}
-    .cell.selected{box-shadow:inset 0 0 0 2px var(--odec-secondary)}
-    .photo{flex:1 1 auto;display:flex;align-items:center;justify-content:center;border:1px solid var(--odec-line);background:#F9FAFB;border-radius:8px;overflow:hidden}
+    .cell.selected{box-shadow:inset 0 0 0 2px var(--ink)}
+    .photo{flex:1 1 auto;display:flex;align-items:center;justify-content:center;border:1px solid var(--line);background:#F9FAFB;border-radius:8px;overflow:hidden}
     .photo img{max-width:100%;max-height:210px;object-fit:contain}
+    .logo{display:flex;justify-content:center;align-items:center;min-height:54px}
+    .logo img{max-width:80%;max-height:48px;object-fit:contain}
     .name{font-weight:800;text-align:center}
 
     .mark{position:absolute;inset:10px;display:none;place-items:center;pointer-events:none}
     .mark img{width:58%;max-width:240px;opacity:.97;transform:rotate(-7deg)}
     .cell.selected .mark{display:grid}
 
-    footer.foot{display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:space-between;padding:14px 18px;border-top:2px solid var(--odec-secondary)}
-    .rules{color:#4B5563}
+    .foot{display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:space-between;padding:14px 18px;border-top:2px solid var(--ink)}
     .controls{display:flex;gap:10px}
-    .btn{border:2px solid var(--odec-secondary);background:var(--odec-secondary);color:#fff;padding:10px 14px;border-radius:8px;font-weight:800;letter-spacing:.2px;cursor:pointer}
-    .btn.secondary{background:#fff;color:var(--odec-secondary)}
-    .status{display:none;padding:10px 14px;border-left:4px solid var(--odec-accent);background:#ECFDF5;border-radius:8px;margin:12px 18px;font-weight:600}
+    .btn{border:2px solid var(--ink);background:var(--ink);color:#fff;padding:10px 14px;border-radius:8px;font-weight:800;letter-spacing:.2px;cursor:pointer}
+    .btn.secondary{background:#fff;color:var(--ink)}
+    .status{display:none;padding:10px 14px;border-left:4px solid var(--ok);background:#ECFDF5;border-radius:8px;margin:12px 18px;font-weight:600}
 
     .sr{position:absolute;left:-9999px}
-    /* Impresión */
-    @media print{
-      .bar, .controls, .status{display:none !important}
-      .sheet{box-shadow:none;border:none}
-    }
+    @media print{ .bar, .controls, .status, .tabs{display:none!important}; .wrap{box-shadow:none;border:none} }
   </style>
   <script src="config.js"></script>
 </head>
 <body>
-  <div class="bar">
-    <div class="bar-inner">
-      <img src="assets/odec-logo.svg" alt="ODEC"/>
-      <div class="title">ODEC — Observatorio para la Democracia y la Educación Cívica</div>
-    </div>
-  </div>
-
-  <main class="sheet" role="application" aria-label="Consulta del Frente por la Vida — Ejercicio Pedagógico">
+  <div class="bar"><div class="inner"><img src="assets/odec-logo.svg" alt="ODEC"><div class="brand">ODEC — Consultas (Ejercicio Pedagógico)</div></div></div>
+  <main class="wrap">
     <header class="hdr">
-      <h1>Consulta del Frente por la Vida — Tarjeta de Ejercicio Pedagógico</h1>
-      <p>Seleccione una sola opción. Esta simulación es de carácter pedagógico.</p>
+      <h1>Consulta del Frente por la Vida y otras consultas — Tarjeta de Ejercicio Pedagógico</h1>
+      <p>Seleccione una sola opción. Esta simulación es de carácter pedagógico. Los nombres y agrupaciones provienen del anexo compartido.</p>
     </header>
-
     <section class="notice">
       <div><span class="caps">Instrucciones:</span> Marque con una <b>X</b> el precandidato de su preferencia. <span class="warn">Marcar más de una opción anula el voto.</span></div>
     </section>
 
-    <section class="grid" role="radiogroup" aria-label="Seleccione una única opción" id="grid">
-      <!-- Mostramos solo Nombre + Primer Apellido. El envío usa el nombre EXACTO del archivo -->
+    <nav class="tabs" id="tabs"></nav>
 
-      <article class="cell" role="radio" tabindex="0" aria-checked="false" data-file="Daniel Quintero.png">
-        <div class="photo"><img src="Daniel Quintero.png" alt="Daniel Quintero.png"></div>
-        <div class="name">DANIEL QUINTERO</div>
-        <div class="mark"><img src="X.png" alt="Marca X"></div>
-      </article>
-
-      <article class="cell" role="radio" tabindex="0" aria-checked="false" data-file="Edinson Torres.png">
-        <div class="photo"><img src="Edinson Torres.png" alt="Edinson Torres.png"></div>
-        <div class="name">EDISON TORRES</div>
-        <div class="mark"><img src="X.png" alt="Marca X"></div>
-      </article>
-
-      <article class="cell" role="radio" tabindex="0" aria-checked="false" data-file="Hector Pineda.png">
-        <div class="photo"><img src="Hector Pineda.png" alt="Hector Pineda.png"></div>
-        <div class="name">HECTOR PINEDA</div>
-        <div class="mark"><img src="X.png" alt="Marca X"></div>
-      </article>
-
-      <article class="cell" role="radio" tabindex="0" aria-checked="false" data-file="Roy Barreras.png">
-        <div class="photo"><img src="Roy Barreras.png" alt="Roy Barreras.png"></div>
-        <div class="name">ROY BARRERAS</div>
-        <div class="mark"><img src="X.png" alt="Marca X"></div>
-      </article>
-
-      <article class="cell" role="radio" tabindex="0" aria-checked="false" data-file="Martha Bernal.png">
-        <div class="photo"><img src="Martha Bernal.png" alt="Martha Bernal.png"></div>
-        <div class="name">MARTHA BERNAL</div>
-        <div class="mark"><img src="X.png" alt="Marca X"></div>
-      </article>
-    </section>
+    <section class="grid" id="grid" role="radiogroup" aria-label="Seleccione una única opción"></section>
 
     <div class="status" id="statusOK">Voto registrado correctamente.</div>
 
     <footer class="foot">
-      <div class="rules"><b>Recuerde:</b> marque una sola opción. Esta tarjeta es una simulación pedagógica de la ODEC.</div>
+      <div><b>Recuerde:</b> marque una sola opción.</div>
       <div class="controls">
-        <button class="btn" id="btnEnviar" title="Registrar voto en hoja">Enviar voto</button>
-        <button class="btn secondary" id="btnLimpiar" title="Limpiar selección">Limpiar</button>
+        <button class="btn" id="btnEnviar">Enviar voto</button>
+        <button class="btn secondary" id="btnLimpiar">Limpiar</button>
       </div>
     </footer>
 
@@ -131,39 +85,101 @@
   </main>
 
   <script>
-    const cells = Array.from(document.querySelectorAll('.cell'));
-    const live = document.getElementById('live');
-    const statusOK = document.getElementById('statusOK');
-
-    function setSelected(cell){
-      cells.forEach(c=>{const sel=(c===cell); c.classList.toggle('selected', sel); c.setAttribute('aria-checked', sel? 'true':'false');});
-      announce('Opción seleccionada');
+    // Utilidades
+    const shortName = (full)=>{
+      const p = full.trim().split(/\s+/);
+      if(p.length===1) return p[0];
+      return (p[0]+' '+p[1]).toUpperCase(); // Nombre + Primer Apellido
     }
-    function selectedCell(){return cells.find(c=>c.classList.contains('selected'))||null}
-    function selectedFile(){const c = selectedCell(); return c? c.dataset.file : null}
-    function announce(msg){ live.textContent=''; setTimeout(()=> live.textContent = msg, 10); }
 
-    cells.forEach(c=>{
-      c.addEventListener('click', ()=> setSelected(c));
-      c.addEventListener('keydown', (e)=>{ if(e.key==='Enter' || e.key===' '){ e.preventDefault(); setSelected(c);} });
-    });
+    let data = null, sel = { consulta:null, file:null };
+
+    async function load(){
+      const res = await fetch('data/consultas.json');
+      data = await res.json();
+      buildTabs();
+      // por defecto la primera consulta
+      if(data.length){ selectConsulta(data[0].id); }
+    }
+
+    function buildTabs(){
+      const tabs = document.getElementById('tabs');
+      tabs.innerHTML = '';
+      data.forEach(c=>{
+        const b = document.createElement('button');
+        b.className='tab'; b.textContent = c.titulo; b.setAttribute('data-id', c.id);
+        b.onclick = ()=> selectConsulta(c.id);
+        tabs.appendChild(b);
+      });
+    }
+
+    function selectConsulta(id){
+      sel.consulta = id; sel.file = null;
+      document.querySelectorAll('.tab').forEach(t=> t.classList.toggle('active', t.getAttribute('data-id')===id));
+      const cons = data.find(c=> c.id===id);
+      renderGrid(cons);
+    }
+
+    function renderGrid(cons){
+      const grid = document.getElementById('grid');
+      grid.innerHTML = '';
+      cons.candidatos.forEach(full=>{
+        const file = full.replace(/\s+/g,' ').trim();
+        const cell = document.createElement('article');
+        cell.className='cell';
+        cell.setAttribute('role','radio');
+        cell.setAttribute('tabindex','0');
+        cell.setAttribute('aria-checked','false');
+        cell.dataset.file = file + '.png';
+        cell.dataset.consulta = cons.titulo;
+
+        const photo = document.createElement('div'); photo.className='photo';
+        const img = document.createElement('img'); img.alt = file + '.png';
+        // Ruta esperada de fotos (por consulta)
+        img.src = `fotos/${cons.id}/${file}.png`;
+        photo.appendChild(img);
+
+        const logo = document.createElement('div'); logo.className='logo';
+        const logoi = document.createElement('img'); logoi.alt = file + ' logo';
+        // Ruta esperada de logos (por consulta)
+        logoi.src = `logos/${cons.id}/${file}-logo.png`;
+        logo.appendChild(logoi);
+
+        const name = document.createElement('div'); name.className='name'; name.textContent = shortName(full);
+        const mark = document.createElement('div'); mark.className='mark'; mark.innerHTML = '<img src="X.png" alt="Marca X">';
+
+        cell.appendChild(photo); cell.appendChild(name); cell.appendChild(logo); cell.appendChild(mark);
+
+        cell.addEventListener('click', ()=> selectCard(cell));
+        cell.addEventListener('keydown', (e)=>{ if(e.key==='Enter'||e.key===' '){ e.preventDefault(); selectCard(cell); }});
+        grid.appendChild(cell);
+      });
+    }
+
+    function selectCard(cell){
+      document.querySelectorAll('.cell').forEach(c=>{ const s = (c===cell); c.classList.toggle('selected', s); c.setAttribute('aria-checked', s? 'true':'false'); });
+      sel.file = cell.dataset.file;
+      sel.consulta = cell.dataset.consulta;
+    }
 
     document.getElementById('btnLimpiar').addEventListener('click', ()=>{
-      cells.forEach(c=>{ c.classList.remove('selected'); c.setAttribute('aria-checked','false'); });
-      statusOK.style.display = 'none';
+      document.querySelectorAll('.cell').forEach(c=>{ c.classList.remove('selected'); c.setAttribute('aria-checked','false'); });
+      sel.file = null;
+      document.getElementById('statusOK').style.display='none';
     });
 
     document.getElementById('btnEnviar').addEventListener('click', async ()=>{
-      const file = selectedFile();
-      if(!file){ alert('Primero seleccione una opción.'); return; }
+      if(!sel.file){ alert('Primero seleccione una opción.'); return; }
       if(!window.SHEETS_ENDPOINT){ alert('Falta configurar SHEETS_ENDPOINT en config.js'); return; }
       try{
-        const res = await fetch(window.SHEETS_ENDPOINT, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ filename:file, ts:new Date().toISOString() })});
+        const res = await fetch(window.SHEETS_ENDPOINT, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({ filename: sel.file, consulta: sel.consulta, ts: new Date().toISOString() }) });
         if(!res.ok) throw new Error('HTTP '+res.status);
-        statusOK.style.display = 'block';
+        document.getElementById('statusOK').style.display='block';
         window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
       }catch(err){ alert('No se pudo registrar. Verifique config.js'); }
     });
+
+    load();
   </script>
 </body>
 </html>
